04-istio-manifest/00-deploy-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    service: redis
  namespace: oauth2-proxy
spec:
  ports:
  - port: 6379 
#    name: http
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: oauth2-proxy
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: "bitnami/redis:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
