04-istio-manifest/vs-externos.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-browser
spec:
  hosts:
  - helloworld.cluster.local
  location: MESH_EXTERNAL
