04-istio-manifest/vs-internos.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: oauth2-proxy
spec:
  hosts:
  - oauth2-proxy.oauth2-proxy.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
  resolution: DNS
